--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="address">Address :</string>
     <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
     <string name="ok">OK</string>
+    <string name="all_bookings">All Bookings</string>
 </resources>
