--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
     <string name="ok">OK</string>
     <string name="all_bookings">All Bookings</string>
+    <string name="select_a_date_to_show_the_available_slots">Select a Date to show the available Slots !!</string>
 </resources>
