--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,14 @@
     <string name="warning">Warning !!</string>
     <string name="clinic_is_not_working_on"><![CDATA[DR. Ehab Kabils Clinic is not Working on Mondays & Tuesdays.]]></string>
     <string name="manage_available_slots">Manage Available Slots</string>
+    <string name="for_you">For You **</string>
+    <string name="feedbacks">Feedbacks</string>
+    <string name="all_feedbacks">All Feedbacks</string>
+    <string name="post">Post</string>
+    <string name="enter_the_answer">Enter The Answer ...</string>
+    <string name="answer">Answer</string>
+    <string name="enter_the_question">Enter The Question ...</string>
+    <string name="question">Question</string>
+    <string name="all_questions">All Questions</string>
+    <string name="write_your_feedback_here">Write your feedback here</string>
 </resources>
