--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,74 +1,93 @@
 <resources>
     <string name="app_name">Clinic</string>
-    <string name="loading">Loading...</string>
-    <string name="continue_as_doctor">   Continue as Doctor</string>
-    <string name="continue_as_patient">  Continue as Patient</string>
-    <string name="noUserTypeSelected">No User Type Selected</string>
-    <string name="required">required</string>
-    <string name="wrong_email">Wrong Email</string>
-    <string name="have_account">Don\'t have an account ?</string>
-    <string name="register">Register Now</string>
-    <string name="forget_password">Forget Password ?</string>
-    <string name="remember_me">Remember me</string>
-    <string name="setting">Settings</string>
-    <string name="intro">Ehab Kabil Clinic </string>
-    <string name="cancel">Cancel</string>
-    <string name="confirm">Confirm</string>
-    <string name="selected_date">Selected Date: ---</string>
-    <string name="pick_a_date">Pick a Date</string>
-    <string name="your_appointments">Your Appointments</string>
-    <string name="welcome_back">Welcome Back !!</string>
-    <string name="to_continue_login_now">To continue , Login Now</string>
-    <string name="e_mail">E-mail</string>
-    <string name="password">Password</string>
-    <string name="login">Login</string>
-    <string name="get_started">Get Started</string>
-    <string name="skip">Skip</string>
-    <string name="onboarding_intro" translatable="false">Consultant and Head of the Department of Obstetrics, \n Gynecology and Infertility at the Armed Forces Hospitals</string>
-    <string name="dr_ehab_kabil">Dr. Ehab Kabil</string>
-    <string name="easy_appointments" translatable="false">Easy Appointments</string>
-    <string name="how_to_book" translatable="false">Making clinic visits easier than ever. \n Quickly find and book your next appointment without \n the hassle. Our intuitive system lets you schedule, confirm, \n and manage your appointments in just a few simple steps.</string>
-    <string name="my_profile">My Profile</string>
-    <string name="logout">Logout</string>
-    <string name="change_password">Change Password</string>
-    <string name="about_us">About Clinic</string>
-    <string name="language">Language</string>
-    <string name="cases">Cases</string>
-    <string name="case_details">Case Details</string>
-    <string name="patient_name">Patient Name :</string>
-    <string name="age">Age :</string>
-    <string name="phone_number">Phone Number :</string>
-    <string name="email">Email :</string>
-    <string name="address">Address :</string>
-    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
-    <string name="ok">OK</string>
-    <string name="all_bookings">All Bookings</string>
-    <string name="select_a_date_to_show_the_available_slots">Select a Date to show the available Slots !!</string>
-    <string name="bookings_of_today">Bookings of Today</string>
-    <string name="all_cases">All Cases</string>
-    <string name="book_now">Book Now ?</string>
-    <string name="speciality" translatable="false">Consultant and Head of the Department of Obstetrics, Gynecology and Infertility at the Armed Forces Hospitals</string>
-    <string name="stars" translatable="false"><![CDATA[5 On Veseeta & Clindo]]></string>
-    <string name="price">200 EGP</string>
-    <string name="hi_dr_ehab_kabil">Hi, DR. Ehab Kabil</string>
-    <string name="common_questions">Common Questions ?</string>
-    <string name="new_user">New User</string>
-    <string name="pick_a_slot">Pick a Slot</string>
-    <string name="next">Next</string>
-    <string name="warning">Warning !!</string>
-    <string name="clinic_is_not_working_on"><![CDATA[DR. Ehab Kabils Clinic is not Working on Mondays & Tuesdays.]]></string>
-    <string name="manage_available_slots">Manage Available Slots</string>
-    <string name="for_you">For You **</string>
-    <string name="feedbacks">Feedbacks</string>
-    <string name="all_feedbacks">All Feedbacks</string>
-    <string name="post">Post</string>
-    <string name="enter_the_answer">Enter The Answer ...</string>
-    <string name="answer">Answer</string>
-    <string name="enter_the_question">Enter The Question ...</string>
-    <string name="question">Question</string>
-    <string name="all_questions">All Questions</string>
-    <string name="write_your_feedback_here">Write your feedback here</string>
-    <string name="rating">Rating</string>
-    <string name="give_your_visit_a_rate">Give Your Visit to DR. Ehab Kabil Clinic a Rate</string>
-    <string name="stars_intro">How many stars would you like to give to the clinic ?</string>
+    <string name="loading">جاري التحميل ...</string>
+    <string name="continue_as_doctor">اكمل كطبيب</string>
+    <string name="continue_as_patient">اكمل كمريض</string>
+    <string name="noUserTypeSelected">لم يتم اختيار نوع المستخدم</string>
+    <string name="required">الزامي</string>
+    <string name="wrong_email">خطأ في البريد الالكتروني</string>
+    <string name="have_account">هل لديك حساب مسبق ؟</string>
+    <string name="register">"انشأ حساب الان "</string>
+    <string name="forget_password">هل نسيت كلمة المرور ؟</string>
+    <string name="remember_me">تذكرني</string>
+    <string name="setting">الاعدادات</string>
+    <string name="intro">عيادة الدكتور ايهاب قابيل</string>
+    <string name="cancel">الغاء</string>
+    <string name="confirm">تأكيد</string>
+    <string name="selected_date">التاريخ المختار: ---</string>
+    <string name="pick_a_date">اختر ميعاد</string>
+    <string name="your_appointments">مواعيدك المحجوزه</string>
+    <string name="welcome_back">مرحباا !!</string>
+    <string name="to_continue_login_now">سجل دخولك الان !!</string>
+    <string name="e_mail">البريد الالكتروني</string>
+    <string name="password">كلمة المرور</string>
+    <string name="login">تسجيل دخول</string>
+    <string name="get_started">ابدأ</string>
+    <string name="skip">تخطي</string>
+    <string name="dr_ehab_kabil">دكتور/ ايهاب قابيل</string>
+    <string name="my_profile">ملفي الشخصي</string>
+    <string name="logout">تسجيل خروج</string>
+    <string name="change_password">تغيير كلمة المرور</string>
+    <string name="about_us">عن العيادة</string>
+    <string name="language">اللغه</string>
+    <string name="cases">الحالات</string>
+    <string name="case_details">تفاصيل الحالة</string>
+    <string name="patient_name">"اسم المريض: "</string>
+    <string name="age">عمر المريض:</string>
+    <string name="phone_number">رقم التيليفون:</string>
+    <string name="email">البريد الالكتروني:</string>
+    <string name="address">العنوان:</string>
+    <string name="are_you_sure_you_want_to_logout">تأكيد تسجيل الخروج ؟</string>
+    <string name="ok">نعم</string>
+    <string name="all_bookings">كل الحجوات</string>
+    <string name="select_a_date_to_show_the_available_slots">اختر تاريخ لعرض المواعيد المتاحة</string>
+    <string name="bookings_of_today">حجوزات اليوم</string>
+    <string name="all_cases">كل الحالات</string>
+    <string name="book_now">احجز الان ؟</string>
+    <string name="price">200 جنيهاا</string>
+    <string name="hi_dr_ehab_kabil">مرحباا دكتور ايهاب</string>
+    <string name="common_questions">اسئلة شائعة ؟</string>
+    <string name="new_user">مستخدم جديد</string>
+    <string name="pick_a_slot">اختار موعد</string>
+    <string name="next">التالي</string>
+    <string name="warning">تحذير !!</string>
+    <string name="clinic_is_not_working_on">عيادة دكتور ايهاب قابيل لا تعمل يومي الاثنين و الثلاثاء</string>
+    <string name="manage_available_slots">تعديل المواعيد المتاحة</string>
+    <string name="for_you">لكي **</string>
+    <string name="feedbacks">التقييمات</string>
+    <string name="all_feedbacks">كل التقييمات</string>
+    <string name="post">نشر</string>
+    <string name="enter_the_answer">... ادخل الاجابة</string>
+    <string name="answer">الاجابه</string>
+    <string name="enter_the_question">... ادخل السؤال</string>
+    <string name="question">السؤال</string>
+    <string name="all_questions">كل الاسئلة الشائعه</string>
+    <string name="write_your_feedback_here">اكتب تعليقك هنا</string>
+    <string name="rating">تقييم</string>
+    <string name="give_your_visit_a_rate">اكتب تقييمك لعيادة الدكتور ايهاب قابيل</string>
+    <string name="stars_intro">كم نجمة تعطي لزياراتك للعيادة ؟</string>
+    <string name="about_the_doctor">عن الدكتور</string>
+    <string name="your_bookings">مواعيدك</string>
+    <string name="hi">‘اهلا</string>
+    <string name="about_the_clinic">عن العيادة</string>
+    <string name="book_an_appointment_now">احجز موعد الان !</string>
+    <string name="onboarding_intro">استشاري ورئيس قسم التوليد وأمراض النساء والعقم بمستشفيات القوات المسلحة</string>
+    <string name="delivery_essensials">شنطة المستشفي</string>
+    <string name="baby_names">اقتراحات اسماء لطفلك</string>
+    <string name="baby_kicks">ركلات الطفل</string>
+    <string name="confirm_password">تأكيد كلمة المرور</string>
+    <string name="hospital_bag">شنطة المستشفي</string>
+    <string name="your_essencials">مستلزماتك</string>
+    <string name="baby_essencials">مستلزمات طفلك</string>
+    <string name="booking_confirmed_dialog_message">تم تأكيد حجزك في الساعة %s! ✅</string>
+    <string name="booking_dialog_additional_info">يُفضل التواجد في العيادة قبل الموعد بـ 30 دقيقة على الأقل. في حال فوات دورك، سيتم تأجيلك إلى نهاية المواعيد. ⚠️</string>
+    <string name="close_date">الغاء تاريخ</string>
+    <string name="close_slot">الغاء موعد</string>
+    <string name="what_is_the_edit">ما هو التعديل ؟</string>
+    <string name="do_edit_here">قم بالتعديل هنا !!</string>
+    <string name="edit_ques">عدل السؤال</string>
+    <string name="edit_ans">عدل الاجابة</string>
+    <string name="note">ملحوظه</string>
+    <string name="write_notes">اكتب ملاحظاتك هنا !!</string>
+    <string name="notes_headings">ملاحظات</string>
 </resources>
