prices and forget password are done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="cancel">الغاء</string>
     <string name="confirm">تأكيد</string>
     <string name="selected_date">التاريخ المختار: ---</string>
-    <string name="pick_a_date">اختر لالغاء ميعاد</string>
+    <string name="pick_a_date">اختر ميعاد</string>
     <string name="your_appointments">مواعيدك المحجوزه</string>
     <string name="welcome_back">مرحباا !!</string>
     <string name="to_continue_login_now">سجل دخولك الان !!</string>
